--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h1
 	float: left;
 	background-color: white;
 	width: 68%;
-	height: 1500px;
+	height: auto;
 	margin: 3%;
 	padding: 15px;
 	font-size: 25px;
