--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h1
 	width: 71%;
 	height: auto;
 	margin: 3%;
-	padding: 15px;
+	padding: 2%;
 	font-size: 25px;
 	border-radius: 15px;
 	text-align: justify;
