--- a/style.css
+++ b/style.css
@@ -45,10 +45,7 @@ h1
 	background-color: white;
 	width: 68%;
 	height: auto;
-	margin-top: 3%;
-	margin-bottom: 3%;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 3%;
 	padding: 2%;
 	font-size: 25px;
 	border-radius: 15px;
