--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h1
 	height: auto;
 	margin-top: 3%;
 	margin-bottom: 3%;
-	margin-left: auto;
+	margin-left: 20%;
 	margin-right: auto;
 	padding: 2%;
 	font-size: 25px;
