--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ h1
 	height: auto;
 	margin-top: 3%;
 	margin-bottom: 3%;
-	margin-left: 10%;
-	margin-right: auto;
+	margin-left: 9%;
+	margin-right: 9%;
 	padding: 2%;
 	font-size: 25px;
 	border-radius: 15px;
