--- a/style.css
+++ b/style.css
@@ -54,6 +54,16 @@ h1
 	border-radius: 15px;
 	text-align: justify;
 }
+.linia
+{
+	background-image: url("tlo1.png");
+	height:5px;
+	width:500px;
+	margin-bottom:30px;
+	margin-top:30px;
+	margin-left:auto;
+	margin-right:auto;
+}
 .l
 {
 	text-decoration:none;
