--- a/style.css
+++ b/style.css
@@ -46,21 +46,17 @@ h1
 .linia
 {
 	background-image: url("tlo1.png");
-	height:5px;
-	width:800px;
-	margin-bottom:30px;
-	margin-top:30px;
-	margin-left:auto;
-	margin-right:auto;
-}
-.l
-{
-	text-decoration:none;
-	color: white;
+	height: 5px;
+	width: 1000px;
+	margin-bottom: 30px;
+	margin-top: 30px;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 5px;
 }
 a
 {
-	text-decoration: ;
+	text-decoration: none;
 	color: black;
 }
 /*
@@ -74,5 +70,10 @@ a
 	text-align: center;
 	font-size: 25px;
 	padding: 10px;
+}
+.l
+{
+	text-decoration:none;
+	color: white;
 }
 */
