--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h1
 {
 	background-image: url("tlo1.png");
 	height: 5px;
-	width: 1000px;
+	width: 40%;
 	margin-bottom: 30px;
 	margin-top: 30px;
 	margin-left: auto;
