--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@ p
 }
 #name
 {
-	background-image: url("tlo1.png");
+	background-color: rgba(0, 50, 255, 1);
+	background-image: linear-gradient(90deg, rgba(0, 50, 255, 1) 0%, rgba(255, 0, 238, 1) 100%);
 	width: 100%;
 	height: 100px;
 	text-align: center;
