--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ h1
 }
 .linia
 {
-	background-image: url("tlo1.png");
+	background-color: rgba(0, 50, 255, 1);
+	background-image: linear-gradient(90deg, rgba(0, 50, 255, 1) 0%, rgba(255, 0, 238, 1) 100%);
 	height: 5px;
 	width: 60%;
 	margin-bottom: 30px;
