--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ p
 	font-size: 50px;
 	color:#1b23bf;
 }
-#name
+header
 {
 	background-color: rgba(0, 50, 255, 1);
 	background-image: linear-gradient(90deg, rgba(0, 50, 255, 1) 0%, rgba(255, 0, 238, 1) 100%);
@@ -30,7 +30,7 @@ h1
 	font-size: 50px;
 	line-height: 100px;
 }
-.slajd
+main
 {
 	float: left;
 	background-color: white;
@@ -45,7 +45,7 @@ h1
 	border-radius: 15px;
 	text-align: justify;
 }
-.linia
+.line
 {
 	background-color: rgba(0, 50, 255, 1);
 	background-image: linear-gradient(90deg, rgba(0, 50, 255, 1) 0%, rgba(255, 0, 238, 1) 100%);
