--- a/zaliczenie/style.css
+++ b/zaliczenie/style.css
@@ -17,55 +17,111 @@
         width: 100%;
     }
 }
+@keyframes start
+{
+    0%
+    {
+        margin-top: 50%;
+        opacity: 0;
+    }
+    100%
+    {
+        margin-top: 40%;
+    }
+}
 body
 {
     margin: 0;
     padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: #008800;
+    font-family: "Josefin Sans", sans-serif;
+}
+#subcontainer
+{
+    width: 100%;
+    height: 1035px;
+}
+#fale
+{
+    z-index: 2;
+    position: absolute;
+    width: 100%;
+}
+#zdj
+{
+    width: 100%;
+    z-index: 1;
+    position: absolute;
+}
+h1
+{
+    z-index: 3;
+    position: absolute;
+    color: white;
+    
+    font-size: 70px;
+    margin-top: 40%;
+    width: 100%;
+    text-align: center;
+    animation: start 2s 0.5s backwards;
+}
+#container
+{
+    background-color: white;
 }
 header
 {
-    background-color: green;
+    background-color: #008800;
     width: 100%;
     line-height: 1.8;
     height: 100px;
     float: left;
     margin-right: auto;
     margin-left: auto;
+    text-align: center;
+    color: white;
+    font-size: 50px;
+    font-family: "Josefin Sans", sans-serif;
+}
+nav
+{
+    width: 20%;
+    clear: both;
+    background-color: #707070;
+    float: left;
+    color: white;
+
+    /* display: table-cell; */
+}
+main
+{
+    /* display: table-cell; */
+    float: left;
+    background-color: white;
+    width: 76%;
+    padding: 2%;
 }
 footer
 {
     clear: both;
     text-align: center;
-}
-/* i
-{
+    width: 100%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    background-color: #707070;
     
+}
+i
+{
     color:white;
-    float: right;
-    font-size: 20px;
-    padding-top: ;
-    padding-bottom: ;
+    font-size: 50px;
     padding-right: 5px;
-} */
-h1
-{
-    margin-right: auto;
-    margin-left: auto;
 }
-img
+iframe
 {
-    float: left;
-}
-nav
-{
-    width: 25%;
-    clear: both;
-    float: left
-}
-main
-{
-    float: left;
+    margin: 10px;
+    width: 1400px;
+    height: 700px;
 }
 nav > ul
 {
@@ -79,6 +135,7 @@ nav > ul > li
     display: block;
     background-color: #707070;
     line-height: 3;
+    font-size: 15px;
 }
 nav > ul > li > a
 {
@@ -110,4 +167,14 @@ nav > ul > li:hover > .emptyline > .line
 nav > ul > li > a
 {
     margin-left: 15px;
+}
+p
+{
+    margin: 0;
+    text-align: center;
+    font-size: 25px;
+}
+span
+{
+    text-align: right;
 }
